src/main/resources/static/shiba.css
/* ... */
.illustration--cfa-logo {
  background-image: url(/images/code-for-america-logo_white.svg);
  margin-left: 0;
  background-size: 126px 84px;
}

.mn-logo {
  width: 50%;
}

.capitalized {
  text-transform: capitalize;
}

.footer__privacy-policy-link:hover {
  color: rgb(230, 242, 250);
}

.no-button {
  margin-left: 0;
  margin-right: 0;
}

.feedback-buttons-group {
  display: flex;
  flex-direction: row;
}

.feedback-buttons {
  margin-right: 20px;
  cursor: pointer;
  width: 10rem;
  text-align: center;
  border: 1px solid #5F5854;
  border-radius: 4px;
  height: 10rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  box-sizing: border-box;
}

.feedback-buttons i {
  font-size: 5rem;
}

.textarea {
  resize: none;
}

input:checked + .feedback-buttons {
  border: 2px solid #000000;
}

input[id='happy']:checked + .feedback-buttons {
  background-color: rgba(143, 228, 37, 0.5);
}

input[id='meh']:checked + .feedback-buttons {
  background-color: rgba(255, 200, 69, 0.5);
}

input[id='sad']:checked + .feedback-buttons {
  background-color: #F8C7B5;
}

.text--green {
  font-weight: 700;
  font-size: 1.6rem;
  line-height: 2.5rem;
}

.address-validation .radio-button.is-selected {
  border: 2px #008060 solid;
  border-radius: 5px;
  background-color: unset;
}

.address-validation .radio-button.left-aligned {
  padding-left: 2.5rem;
}

.address-validation .radio-button {
  border: 2px transparent solid;
  border-radius: 5px;
}

.address-validation .radio-button div {
  font-weight: normal;
}

.display-flex {
  display: flex;
}

.align-self-end {
  align-self: flex-end;
}

.word-wrap-break-word {
  word-wrap: break-word;
}

.spacing-above-45 {
  margin-top: 45px;
}

.padding-left-20 {
  padding-left: 20px;
}

.padding-top-1rem {
  padding-top: 1rem;
}

.padding-bottom-3rem {
  padding-bottom: 3rem;
}

/* MaterialIcons that haven't been added to honeycrisp variables.scss */
.checkbox-icons {
  font-weight: bold;
  max-width: 2rem;
  min-width: 2rem;
  padding-top: .25rem;
  margin-right: 1rem;
}

.checkbox-icons svg {
  width: 100%;
  height: auto;
}

label.checkbox p.text--help {
  font-weight: 400;
  padding-top: 1rem;
}

/* CSS styling to remove scroll from number input types */
/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

/* Branding Phase 2 Link styles */
.slab a:not(.button):not(.reveal__link):not(.text--red),
.slab a:not(.button):not(.reveal__link):not(.text--red):focus,
.button--link,
.button--link:focus {
  color: #003865;
}

.slab a:not(.button):not(.reveal__link):hover,
.slab a:not(.button):not(.reveal__link):active,
.button--link:hover,
.button--link:active {
  color: #741078;
}

.language-select {
  background: transparent;
  margin-left: auto;
}

@media screen and (min-width: 601px) {
  .language-select {
    margin-left: initial;
  }
}

.language-selector {
  border: none;
  font-weight: bold;
  font-size: 1.6rem;
}

.language-selector, .language-select:after {
  color: #E9F6FF;
}

.language-selector-option {
  color: #003865;
}

.toolbar__wrapper {
  background: #003865;
  margin-left: -1.5rem;
  margin-right: -1.5rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  max-width: 100vw;
  height: 6rem;
  font-size: 1.6rem;
}

@media screen and (min-width: 601px) {
  .toolbar__wrapper {
    margin-left: -3.5rem;
    margin-right: -3.5rem;
    padding-left: 3.5rem;
    padding-right: 3.5rem;
  }

  .sample-case-number-images {
    display: flex;
  }
}

.sample-case-number-images img {
  max-height: 30vh;
}

.toolbar {
  margin-top: 0;
  justify-content: flex-start;
}

@media screen and (min-width: 601px) {
  .toolbar {
    justify-content: flex-end;
  }
}

@media screen and (max-width: 600px) {
  .sr-only-on-mobile {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border: 0;
  }
}


.toolbar__wrapper .toolbar__left, .toolbar__wrapper .toolbar__right {
  margin-top: 0.1rem;
}

.logo, .logo:hover, .logo:visited, .logo:active {
  color: #E9F6FF;
  text-decoration: none;
  font-weight: bold;
  padding: 0 0.5rem;
}

.logo:focus {
  box-shadow: inset 0 0 0 5px #ffae00;
}

@media screen and (min-width: 601px) {
  .logo {
    margin-right: auto;
  }
}

.mn-state-icon {
  width: 38px;
  vertical-align: -15px;
}

.svg-button-icon__left {
  position: relative;
  top: 0.15em;
  right: 0.25em;
}

.svg-button-icon__right {
  position: relative;
  top: 0.15em;
  left: 0.15em;
}

.success-icons svg {
  max-width: 36px;
}

.select__element:focus {
  box-shadow: inset 0 0 0 5px #FFAE00;
}

/* Changes from Honeycrisp.css that were migrated here */

@font-face {
  src: url(/fonts/icomoon.eot?ia7soh);
  src: url(/fonts/icomoon.eot?ia7soh#iefix) format("embedded-opentype"), url(/fonts/icomoon.ttf?ia7soh) format("truetype"), url(/fonts/icomoon.woff?ia7soh) format("woff"), url(/fonts/icomoon.svg?ia7soh#icomoon) format("svg");
  font-family: 'MaterialIcons-Regular';
  src: url(/fonts/MaterialIcons-Regular.eot?ia7soh);
  src: url(/fonts/MaterialIcons-Regular.eot?ia7soh#iefix) format("embedded-opentype"),
  url(/fonts/MaterialIcons-Regular.ttf?ia7soh) format("truetype"),
  url(/fonts/MaterialIcons-Regular.woff?ia7soh) format("woff"),
  url(/fonts/MaterialIcons-Regular.svg?ia7soh#MaterialIcons-Regular) format("svg");
  font-weight: normal;
  font-style: normal;
}

.select:after,
.scroller:before,
.reveal__link:after,
.flash__message:before,
.checkbox input[type='checkbox']:checked:before,
[class^="icon-"],
[class*=" icon-"] {
  font-family: 'MaterialIcons-Regular' !important;
}

.emoji--checkmark {
  background-image: url(images/checkmark.png);
}

.emoji--crossmark {
  background-image: url(images/crossmark.png);
}

.radio-button.is-selected, .checkbox.is-selected {
  background-color: #EEFFE6;
}
/* ... */

